--- a/paginas/configuracoes.html
+++ b/paginas/configuracoes.html
@@ -69,7 +69,7 @@
             <!--TAMANHO DA FONTE-->
             <div class="tamanho-font">
                 <label for="number">Ajuste de fonte</label>
-                <input id="number" type="number" placeholder="14-20" min="14" max="20">
+                <input id="number" type="number" placeholder="14-20" min="16" max="20">
             </div>
 
             <!--VERSÃO DO APP-->
@@ -88,6 +88,8 @@
         </section>
 
     </section>
+    <script src="../js/configuracoes.js"></script>
+    <script src="../js/config.js"></script>
 </body>
 
 </html>
