--- a/paginas/pagina-inicial-contratante.html
+++ b/paginas/pagina-inicial-contratante.html
@@ -23,11 +23,11 @@
             <h1 class="titulo-patrocinados">Patrocinados</h1>
             <section class="patrocinio">
                 <!--imagens patrocinadas tamanho 308x172 -->
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="../imagens/comercial.png" alt="">
+                <img src="../imagens/comercial (1).png" alt="">
+                <img src="../imagens/comercial (2).png" alt="">
+                <img src="../imagens/comercial (3).png" alt="">
+                <img src="../imagens/comercial (4).png" alt="">
             </section>
         </section>
 
@@ -68,7 +68,7 @@
 
                     <div class="avaliacao">
                         <i class="ri-star-fill"></i>
-                        <div class="numero-de-avaliacao">4,5</div>
+                        <div class="numero-de-avaliacao">0</div>
                     </div>
                 </div>
                 
@@ -101,6 +101,7 @@
         setInterval(changeImage, 3000);
     </script>
     <script src="../js/pagina-contratante.js"></script>
+    <script src="../js/patrocinados.js"></script>
 </body>
 
 </html>
