--- a/paginas/pagina-inicial-profissional.html
+++ b/paginas/pagina-inicial-profissional.html
@@ -67,5 +67,6 @@
         
     </section>
     <script src="../js/pagina-profissional.js"></script>
+    <script src="../js/config.js"></script>
 </body>
 </html>
