--- a/paginas/usuario-contratante.html
+++ b/paginas/usuario-contratante.html
@@ -20,12 +20,6 @@
             <section class="dados-usuario">
                 <div class="img-usuario">
                     <img src="../imagens/imagem-sem-user.png" alt="">
-                    <section class="avaliacao">
-                        <i class="ri-star-fill"></i>
-                        <div class="numero-avaliacao">
-                            4,5
-                        </div>
-                    </section>
                 </div>
                 <section class="informacoes-usuario">
                     <div class="email-usuario" id="email-usuario">email@gmail.com</div>
@@ -62,8 +56,8 @@
                 </div>
             </div>
             <div id="mudar-conta" class="valores">
-                <a href="./cadastro-profissional.html"></a>
-                <h1>Mudar para conta Profissional</h1>
+                <a href="./cadastro-profissional.html"><h1>Mudar para conta Profissional</h1></a>
+                
                 <img src="../imagens/patrocinio_maos-removebg-preview.png" alt="">
             </div>
         </section>
@@ -104,6 +98,7 @@
 
     </section>
     <script src="../js/usuario-contratante.js"></script>
+    <script src="../js/config.js"></script>
 </body>
 
 </html>
