--- a/paginas/usuario-profissional.html
+++ b/paginas/usuario-profissional.html
@@ -20,12 +20,6 @@
             <section class="dados-usuario">
                 <div class="img-usuario">
                     <img src="../imagens/imagem-sem-user.png" alt="">
-                    <section class="avaliacao">
-                        <i class="ri-star-fill"></i>
-                        <div class="numero-avaliacao">
-                            4,5
-                        </div>
-                    </section>
                 </div>
                 <section class="informacoes-usuario">
                     <div class="email-usuario" id="email-usuario">email@gmail.com</div>
@@ -60,14 +54,14 @@
                 <h1>Trabalhos Cadastrados</h1>
                 <div class="valor-de-trabalhos">
                     <!--=ADICIONAR DO BANCO DE DADOS-->
-                    17
+                
                 </div>
             </div>
             <div class="valores">
-                <h1>Trabalhos Finalizados</h1>
+                <h1>Serviços Ativos</h1>
                 <div class="trabalhos-finalizados">
                     <!--=ADICIONAR DO BANCO DE DADOS-->
-                    15
+                
                 </div>
             </div>
         </section>
@@ -80,18 +74,7 @@
             </div>
 
             <section class="seus-patrocinios">
-                <div class="servico-patrocinado">
-                    <img src="../imagens/lampada-removebg-preview.png" alt="">
-                    <div class="nome-do-servico">nome do serviço</div>
-                </div>
-                <div class="servico-patrocinado">
-                    <img src="../imagens/lampada-removebg-preview.png" alt="">
-                    <div class="nome-do-servico">nome do serviço</div>
-                </div>
-                <div class="servico-patrocinado">
-                    <img src="../imagens/lampada-removebg-preview.png" alt="">
-                    <div class="nome-do-servico">nome do serviço</div>
-                </div>
+                <!--vem do banco de dados-->
             </section>
         </section>
 
@@ -134,6 +117,8 @@
 
     </section>
     <script src="../js/usuario-profissional.js"></script>
+    <script src="../js/config.js"></script>
+    <script src="../js/servicos-cadastrados.js"></script>
 </body>
 
 </html>
