--- a/paginas/ajuda-e-suporte.html
+++ b/paginas/ajuda-e-suporte.html
@@ -26,20 +26,10 @@
             <button onclick="ajuda()" type="submit">Enviar</button>
         </section>
 
-        <!--MENSAGENS DE CONTATO-->
-        <section class="mensagens-enviadas">
-            <h1>Enviados</h1>
-            <section class="enviados">
-                <div class="mensagem-enviada">
-                    <!--PEGAR DO BANCO DE DADOS ATRAVES DO EMAIL, E PEGAR TODAS AS MENSAGENS JA ENVIADAS-->
-
-                </div>
-                <h1>Nenhuma mensagem enviada ainda</h1>
-            </section>
-        </section>
 
         <!--NÃO TERA BARRA DE NAVEGAÇÃO-->
     </section>
     <script src="../js/suporte.js"></script>
+    <script src="../js/config.js"></script>
 </body>
 </html>
