--- a/paginas/cadastrar-servico-patrocinado.html
+++ b/paginas/cadastrar-servico-patrocinado.html
@@ -43,5 +43,6 @@
         </section>
     </section>
     <script src="../js/cadastrar-servico.js"></script>
+    <script src="../js/config.js"></script>
 </body>
 </html>
