--- a/paginas/usuario-profissional.html
+++ b/paginas/usuario-profissional.html
@@ -99,7 +99,7 @@
                 </a>
             </div><br><br>
 
-            <a href="../paginas/seus-servicos.html">Seus serviços Cadastrados</a>
+            <a class="seus-servicos" href="../paginas/seus-servicos.html">Seus serviços Cadastrados</a>
         </section>
 
 
