ultima atualização eu acho

--- a/paginas/parte-engrenagem-profissional.html
+++ b/paginas/parte-engrenagem-profissional.html
@@ -53,7 +53,7 @@
         </section>
 
         <section class="deletar-perfil">
-            <button class="deletar-o-perfil">Deletar Perfil</button>
+            <button id="deletarPerfil" class="deletar-o-perfil">Deletar Perfil</button>
         </section>
 
         <!--BARRA DE NAVEGAÇÃO-->
@@ -67,5 +67,6 @@
 </html>
     </section>
     <script src="../js/config.js"></script>
+    <script src="../js/deletar-profissional.js"></script>
 </body>
 </html>
