--- a/paginas/parte-engrenagem.html
+++ b/paginas/parte-engrenagem.html
@@ -53,7 +53,8 @@
         </section>
 
         <section class="deletar-perfil">
-            <button class="deletar-o-perfil">Deletar Perfil</button>
+            <!-- Botão para excluir perfil, com id para identificar no JS -->
+            <button id="deletarPerfil" class="deletar-o-perfil">Deletar Perfil</button>
         </section>
 
         <!--BARRA DE NAVEGAÇÃO-->
@@ -67,5 +68,6 @@
 </html>
     </section>
     <script src="../js/config.js"></script>
+    <script src="../js/deletar-contratante.js"></script>
 </body>
 </html>
