--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <!-- Tela de Carregamento -->
+    <div class="loading-container" id="loading" style="display: none;">
+        <div class="spinner"></div>
+    </div>
+
+
     <section class="container">
         <div class="azul_claro">
 
