--- a/paginas/cadastro-contratante.html
+++ b/paginas/cadastro-contratante.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <!-- Tela de Carregamento -->
+    <div class="loading-container" id="loading" style="display: none;">
+        <div class="spinner"></div>
+    </div>
+
+
     <section class="container">
         <section class="img-cadastro">
             <img src="../imagens/Designer (1).jpeg" alt="">
