--- a/paginas/cadastrar-servico-patrocinado.html
+++ b/paginas/cadastrar-servico-patrocinado.html
@@ -8,6 +8,12 @@
     <title>Serviço Patrocinado</title>
 </head>
 <body>
+    <!-- Tela de Carregamento -->
+    <div class="loading-container" id="loading" style="display: none;">
+        <div class="spinner"></div>
+    </div>
+
+
     <section class="container">
         <section class="header-cadastrar-servico">
             <a href="javascript:history.back();"><i class="ri-arrow-left-line"></i></a>
