--- a/paginas/cadastrar-servico.html
+++ b/paginas/cadastrar-servico.html
@@ -8,6 +8,12 @@
     <title>Cadastrar serviço</title>
 </head>
 <body>
+    <!-- Tela de Carregamento -->
+    <div class="loading-container" id="loading" style="display: none;">
+        <div class="spinner"></div>
+    </div>
+
+
     <section class="container">
         <section class="header-cadastrar-servico">
             <a href="javascript:history.back();"><i class="ri-arrow-left-line"></i></a>
@@ -40,5 +46,6 @@
         </section>
     </section>
     <script src="../js/cadastrar-servico.js"></script>
+    <script src="../js/config.js"></script>
 </body>
 </html>
