--- a/paginas/criar-categoria.html
+++ b/paginas/criar-categoria.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <!-- Tela de Carregamento -->
+    <div class="loading-container" id="loading" style="display: none;">
+        <div class="spinner"></div>
+    </div>
+
     <section class="container">
         <section class="header-criar-categoria">
             <a href="javascript:history.back();"><i class="ri-arrow-left-line"></i></a>
